--- a/src/app/layout/feelings-wheel/feelings-wheel.component.html
+++ b/src/app/layout/feelings-wheel/feelings-wheel.component.html
@@ -31,7 +31,7 @@
                     </div>
                     </div>
                     <div class="right-wordsendcycal">
-                        <img src="images/feelings-Wheel.webp">
+                        <img src="images/feelings-wheel.webp" alt="feeling-wheel"/>
                     </div>
                 </div>
             </div>
