--- a/src/app/layout/blog/blog-details/blog-details.component.html
+++ b/src/app/layout/blog/blog-details/blog-details.component.html
@@ -84,216 +84,6 @@
             </div>
 
 
-           <section class="courses-master-classes">
-            <div class="course-heading" data-aos="fade-up" data-aos-duration="1500">
-                <h5 class="tag-line">Learn from me</h5>
-                <h3 class="title">Courses and Master Classes</h3>
-            </div>
-            <div class="container">
-
-                <div class="swiper mySwiper">
-                    <div class="swiper-wrapper">
-
-                        <div class="swiper-slide">
-                            <div class="card">
-                                <div class="card-img">
-                                    <a href="courses.html">
-                                        <img src="./images/price-change1.jpeg" alt="Course" class="preview" />
-                                         
-                                    </a>
-                                </div>
-
-                                <div class="card-body">
-                                    <div class="rbt-card-top">
-                                        <div class="stars">
-
-                                            <ul>
-                                                <li><i class="fa-solid fa-star"></i></li>
-                                                <li><i class="fa-solid fa-star"></i></li>
-                                                <li><i class="fa-solid fa-star"></i></li>
-                                                <li><i class="fa-solid fa-star"></i></li>
-                                                <li><i class="fa-solid fa-star"></i></li>
-                                            </ul> <span>(15 Reviews)</span>
-                                        </div> 
-                                    </div>
-                                    <h4>Begin Your Journey To Emotional Authenticity</h4>
-                                    <p>Learn the first, foundational steps in developing Emotional Authenticity</p>
-                                    <div class="info">
-                                        <div><i class="fa-solid fa-book"></i>12 Lessons</div>
-                                        <div><i class="fa-solid fa-user-tie"></i>50 Students</div>
-                                    </div>
-                                    <div class="author">
-                                        <img src="./images/course.jpeg" alt="Author">
-                                        <div class="author-info">Course • By Kenny Weiss </div>
-                                    </div>
-                                    <div class="price-row">
-                                        <div class="price">
-                                            <span class="current-price">$29.77</span>
-                                            <span class="original-price">$120</span>
-                                        </div>
-                                        <a href="courses.html" class="button ">
-                                            Learn More <span class="arrow"><i
-                                                    class="fa-solid fa-arrow-right"></i></span>
-                                        </a>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="swiper-slide">
-                            <div class="card">
-                                <div class="card-img">
-                                    <a href="courses.html">
-                                        <img src="./images/price-change2.png" alt="Course" class="preview" />
-                                       
-                                    </a>
-                                </div>
-
-                                <div class="card-body">
-                                    <div class="rbt-card-top">
-                                        <div class="stars">
-
-                                            <ul>
-                                                <li><i class="fa-solid fa-star"></i></li>
-                                                <li><i class="fa-solid fa-star"></i></li>
-                                                <li><i class="fa-solid fa-star"></i></li>
-                                                <li><i class="fa-solid fa-star"></i></li>
-                                                <li><i class="fa-solid fa-star"></i></li>
-                                            </ul> <span>(15 Reviews)</span>
-                                        </div> 
-                                    </div>
-                                    <h4>The Complete Emotional Authenticity Method (one-time Purchase)</h4>
-                                    <p>Overcome your Worst Day Cycle and reclaim your authentic self with Emotional
-                                        Authenticity</p>
-                                    <div class="info">
-                                        <div><i class="fa-solid fa-book"></i>12 Lessons</div>
-                                        <div><i class="fa-solid fa-user-tie"></i>50 Students</div>
-                                    </div>
-                                    <div class="author">
-                                        <img src="./images/course.jpeg" alt="Author">
-                                        <div class="author-info">Course • By Kenny Weiss </div>
-                                    </div>
-                                    <div class="price-row">
-                                        <div class="price">
-                                            <span class="current-price">$29.77</span>
-                                            <span class="original-price">$120</span>
-                                        </div>
-                                        <a href="courses.html" class="button ">
-                                            Learn More <span class="arrow"><i
-                                                    class="fa-solid fa-arrow-right"></i></span>
-                                        </a>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="swiper-slide">
-                            <div class="card">
-                                <div class="card-img">
-                                    <a href="courses.html">
-                                        <img src="./images/price-change3.png" alt="Course" class="preview" />
-                                         
-                                    </a>
-                                </div>
-
-                                <div class="card-body">
-                                    <div class="rbt-card-top">
-                                        <div class="stars">
-
-                                            <ul>
-                                                <li><i class="fa-solid fa-star"></i></li>
-                                                <li><i class="fa-solid fa-star"></i></li>
-                                                <li><i class="fa-solid fa-star"></i></li>
-                                                <li><i class="fa-solid fa-star"></i></li>
-                                                <li><i class="fa-solid fa-star"></i></li>
-                                            </ul> <span>(15 Reviews)</span>
-                                        </div> 
-                                    </div>
-                                    <h4>The Complete Emotional Authenticity Method Subscription</h4>
-                                    <p>Overcome your Worst Day Cycle and reclaim your authentic self with Emotional
-                                        Authenticity</p>
-                                    <div class="info">
-                                        <div><i class="fa-solid fa-book"></i>12 Lessons</div>
-                                        <div><i class="fa-solid fa-user-tie"></i>50 Students</div>
-                                    </div>
-
-                                    <div class="author">
-                                        <img src="./images/course.jpeg" alt="Author">
-                                        <div class="author-info">Course • By Kenny Weiss </div>
-                                    </div>
-                                    <div class="price-row">
-                                        <div class="price">
-                                            <span class="current-price">$77/month</span>
-                                            <span class="original-price">$120</span>
-                                        </div>
-                                        <a href="courses.html" class="button ">
-                                            Learn More <span class="arrow"><i
-                                                    class="fa-solid fa-arrow-right"></i></span>
-                                        </a>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="swiper-slide">
-                            <div class="card">
-                                <div class="card-img">
-                                    <a href="courses.html">
-                                        <img src="./images/price-change1.jpeg" alt="Course" class="preview" />
-                                        
-                                    </a>
-                                </div>
-
-                                <div class="card-body">
-                                    <div class="rbt-card-top">
-                                        <div class="stars">
-
-                                            <ul>
-                                                <li><i class="fa-solid fa-star"></i></li>
-                                                <li><i class="fa-solid fa-star"></i></li>
-                                                <li><i class="fa-solid fa-star"></i></li>
-                                                <li><i class="fa-solid fa-star"></i></li>
-                                                <li><i class="fa-solid fa-star"></i></li>
-                                            </ul> <span>(15 Reviews)</span>
-                                        </div> 
-                                    </div>
-                                    <h4>Begin Your Journey To Emotional Authenticity</h4>
-                                    <p>Learn the first, foundational steps in developing Emotional Authenticity</p>
-                                    <div class="info">
-                                        <div><i class="fa-solid fa-book"></i>12 Lessons</div>
-                                        <div><i class="fa-solid fa-user-tie"></i>50 Students</div>
-                                    </div>
-                                    <div class="author">
-                                        <img src="./images/course.jpeg" alt="Author">
-                                        <div class="author-info">Course • By Kenny Weiss </div>
-                                    </div>
-                                    <div class="price-row">
-                                        <div class="price">
-                                            <span class="current-price">$29.77</span>
-                                            <span class="original-price">$120</span>
-                                        </div>
-                                        <a href="courses.html" class="button ">
-                                            Learn More <span class="arrow"><i
-                                                    class="fa-solid fa-arrow-right"></i></span>
-                                        </a>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-
-                    </div>
-
-                    <!-- Navigation buttons -->
-                    <div class="swiper-button-next"></div>
-                    <div class="swiper-button-prev"></div>
-
-                    <!-- Pagination dots -->
-                    <div class="swiper-pagination"></div>
-                </div>
-
-            </div>
-
-
-        </section>
+          <app-course-slider/>
         </div>
     </main>
