--- a/src/app/layout/home/home.component.html
+++ b/src/app/layout/home/home.component.html
@@ -164,7 +164,7 @@
         </section>
 
         <section class="aboutus">
-            <div class="bg-about"t></div>
+            <div class="bg-about"></div>
             <div class="container">
                 <div class="about-row">
                     <!-- Left Side -->
@@ -443,7 +443,7 @@
 
         </section>
 
-        <section class="paddings">
+        <!-- <section class="paddings">
             <div class="container">
                 <div class="works-sections">
                     <div class="left" data-aos="zoom-in-right">
@@ -476,15 +476,7 @@
 
                     <div class="right" data-aos="zoom-in-left">
                         <div class="step-line"></div>
-   <!-- <div class="step-line"></div> -->
-
-<!-- <div class="step" *ngFor="let step of steps; let i = index">
-  <div class="step-number">{{ i + 1 }}</div>
-  <div class="step-content">
-    <h4>{{ step.title }}</h4>
-    <p>{{ step.description }}</p>
-  </div>
-</div> -->
+  
                     <div class="step">
                             <div class="step-number">1</div>
                             <div class="step-content">
@@ -527,8 +519,10 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </section> -->
 
+
+        <app-exercises-workbook/>
         <section class="self-development" style="background-image: url(./images/8.jpeg);">
             <div class="container">
                 <div class="self-development-content" data-aos="fade-up" data-aos-duration="1500">
