--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -1,4 +1,4 @@
-<header id="headerbg" class="header blacktext" [class.bgcolor]="bgcolor">
+<header id="headerbg" class="header blacktext" [class.bgcolor]="bgcolor" [class.homenav]="isHomeOrBlog">
     <div class="container">
         <div class="navbars" id="nav-menu">
             <div class="topbar">
