--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -369,13 +369,21 @@ a.sociallink {
 .audio-player iframe {
     height: 100px !important;
 }
-
+ 
 header.header {
     width: 100%;
     position: fixed;
     z-index: 999;
     padding: 15px 0;
+
+
+    top: 0;
+    background-color: #FFFFFF;
+    box-shadow: 0px -2px 15px 0px #0000001c;
+    animation: fadeSlideDown 0.5s ease-out;
 }
+
+
 
 header.header.bg {
     top: 0;
