--- a/src/app/layout/books/books.component.html
+++ b/src/app/layout/books/books.component.html
@@ -93,7 +93,7 @@
                             <img src="images/1.jpeg" alt="Woman on computer">
                         </div>
                         <div class="video-boxes">
-                            <img src="images/Ken-book-mockup-vol2-11.webp" alt="Video thumbnail">
+                            <img src="images/books.jpg" alt="Video thumbnail">
                             <a id="play-video" class="video-play-button"
                                 href="https://youtu.be/a1udGRR63OA?si=D7Iddfp5ezrC8jTJ" data-toggle="modal"
                                 data-target="#savoybeachhotel">
