--- a/src/app/components/exercises-workbook/exercises-workbook.component.html
+++ b/src/app/components/exercises-workbook/exercises-workbook.component.html
@@ -33,7 +33,7 @@
                     <div class="right" data-aos="zoom-in-left">
                         <div class="step-line"></div>
  
-                    <div class="step" #stepElement>
+                    <div class="step" >
                             <div class="step-number">1</div>
                             <div class="step-content">
                                 <h4>Truly Heard — Without Judgment</h4>
@@ -42,7 +42,7 @@
                             </div>
                         </div>
 
-                        <div class="step" #stepElement>
+                        <div class="step" >
                             <div class="step-number">2</div>
                             <div class="step-content">
                                 <h4>Clarity on What’s Really Going On</h4>
@@ -51,7 +51,7 @@
                             </div>
                         </div>
 
-                        <div class="step" #stepElement>
+                        <div class="step" >
                             <div class="step-number">3</div>
                             <div class="step-content">
                                 <h4>Personalized Path Forward</h4>
@@ -61,7 +61,7 @@
                         </div>
 
 
-                        <div class="step" #stepElement>
+                        <div class="step" >
                             <div class="step-number">4</div>
                             <div class="step-content">
                                 <h4>Leave With Hope (Maybe for the First Time in a While)</h4>
