--- a/src/app/layout/footer/footer.component.html
+++ b/src/app/layout/footer/footer.component.html
@@ -1,5 +1,5 @@
   <footer class="footer">
-            <div class="footer-content" data-aos="fade-up" data-aos-duration="1500">
+            <div class="footer-content" >
                 <h5 class="tag-line">Weekly Newsletter</h5>
                 <h3> Get my tips directly into your inbox every Monday morning.</h3>
                 <p class="caption">illustration by Ouch.pics</p>
