--- a/src/app/layout/blog/blog.component.html
+++ b/src/app/layout/blog/blog.component.html
@@ -1,15 +1,10 @@
-<!-- src/app/posts/posts.component.html
-<div *ngFor="let post of posts">
-  <h2 [innerHTML]="post.title.rendered"></h2>
-  <div [innerHTML]="post.excerpt.rendered"></div>
-</div> -->
 
 <div class="blog">
   <main class="pt-1">
 
         <section class="blog-section">
             <div class="container">
-                <div class="flex-row" data-aos="fade-up" data-aos-duration="1500">
+                <div class="flex-row">
                     <h5 class="tag-line">Our Blog</h5>
                     <h3>Latest from the Blog</h3>
                 </div>
