--- a/src/app/layout/book-session/book-session.component.html
+++ b/src/app/layout/book-session/book-session.component.html
@@ -9,7 +9,7 @@
                         </div>
                     </div>
 
-                    <div class="event-details-right" data-aos="fade-up" data-aos-duration="1500">
+                    <div class="event-details-right" >
                         <h3>Book Your 1-Hour Breakthrough Call</h3>
                         <p class="italic">A safe starting point — not a lifetime commitment.</p><br>
                         <p>This isn’t therapy. It’s not about fixing everything in one call.
@@ -37,7 +37,7 @@
                            
                         </ul>
                         <div class="button-flex">
-                            <a class="button" href="#clendly">Get Started</a> <a class="button" href="#clendly">Schedual
+                            <a class="button" routerLink="#clendly">Get Started</a> <a class="button" routerLink="#clendly">Schedual
                                 Now</a>
                         </div>
                     </div>
