--- a/src/app/layout/home/home.component.html
+++ b/src/app/layout/home/home.component.html
@@ -3,14 +3,14 @@
         <section class="banner" style="background-image: url(./images/banner.jpeg);">
             <div class="container">
                 <div class="bannerflex">
-                    <div class="banner-content" data-aos="fade-up" data-aos-duration="2000">
+                    <div class="banner-content" >
                         <h5 class="tag-line white">WELCOME TO YOUR</h5>
                         <h1>Journey to Emotional <br>Authenticity</h1>
                         <p>Let me show you the way to stop your emotional
                             misery.</p>
                         <div class="button-row">
-                            <a class="button whitebt" href="courses.html">Explore courses</a>
-                            <a class="button whitebt" href="book-session.html">Book a meeting with kenny</a>
+                            <a class="button whitebt" routerLink="/courses" >Explore courses</a>
+                            <a class="button whitebt" routerLink="/book-session">Book a meeting with kenny</a>
                         </div>
 
                         <p class="people">Trusted by 4,000+ people</p>
@@ -180,16 +180,16 @@
 
                     <!-- Right Side -->
                     <div class="right">
-                        <h5 class="tag-line" data-aos="fade-up" data-aos-duration="1500">WHO WE ARE</h5>
+                        <h5 class="tag-line" data-aos="fade-up" data-aos-duration="100">WHO WE ARE</h5>
                         <h3 data-aos="fade-up" data-aos-duration="1500">Kenny Weiss is an advocate for truth,
                             responsibility, healing, and forgiveness!</h3>
 
-                        <p class="left-br " data-aos="fade-up" data-aos-duration="1500">He specializes in helping people
+                        <p class="left-br " data-aos="fade-up" data-aos-duration="200">He specializes in helping people
                             heal from their emotional hurts,
                             co-dependence, and pain from the past so they can once again love themselves.</p>
 
 
-                        <div class="services" data-aos="fade-up" data-aos-duration="1500">
+                        <div class="services" data-aos="fade-up" data-aos-duration="300">
                             <div class="followers-item">
                                 <i class="fa-brands fa-facebook-f"></i>
                                 <h5>163k</h5>
@@ -241,8 +241,8 @@
                                     <p class="content">Featured in 100+ speaking events, 10,000+ sessions </p>
                                 </li>
                                 <div class="button-row" data-aos="fade-up" data-aos-duration="600">
-                                    <a class="button" href="meet-kenny.html">Read Kenny’s Story</a>
-                                    <a class="button" href="book-session.html">Book a Session</a>
+                                    <a class="button" routerLink="/meet-kenny">Read Kenny’s Story</a>
+                                    <a class="button" routerLink="/book-session">Book a Session</a>
                                 </div>
                             </ul>
                             <div class="video-box shine-effect">
@@ -269,7 +269,7 @@
 
         <section class=" into-section">
             <div class="container">
-                <div class="wellness-header" data-aos="fade-up" data-aos-duration="2000">
+                <div class="wellness-header" data-aos="fade-up" data-aos-duration="100">
                     <h3>Emotional Healing and Personal Growth</h3>
                     <p>Take the next step in your healing journey. Reclaim Your Best Life
                         is a powerful guide to emotional healing, trauma recovery, and building
@@ -382,7 +382,7 @@
 
 
         <section class="bg-colors">
-            <div class="course-heading" data-aos="fade-up" data-aos-duration="1500">
+            <div class="course-heading" data-aos="fade-up" data-aos-duration="100">
                 <h5 class="tag-line">Testimonials</h5>
                 <h3 class="title">Trusted by the world's<br /> fastest growing <br /> companies</h3>
             </div>
@@ -430,7 +430,7 @@
         </section>
 
         <section class="courses-master-classes">
-            <div class="course-heading" data-aos="fade-up" data-aos-duration="1500">
+            <div class="course-heading" data-aos="fade-up" data-aos-duration="100">
                 <h5 class="tag-line">Learn from me</h5>
                 <h3 class="title">Courses and Master Classes</h3>
             </div>
@@ -443,93 +443,16 @@
 
         </section>
 
-        <!-- <section class="paddings">
-            <div class="container">
-                <div class="works-sections">
-                    <div class="left" data-aos="zoom-in-right">
-                        <h5 class="tag-line">How it works?</h5>
-                        <h3>Journey to Success Exercises Workbook</h3>
-                        <p>Kenny Weiss believes if he is going to teach it, he must first live it and learn from it.
-                            Kenny Weiss specializes in helping you heal the pain from your past, transform your toxic
-                            relationships, learn to love and accept your perfect imperfections, and reclaim your
-                            authentic self! Kenny brings knowledge through his own experience and encourages you to get
-                            comfortable with feeling uncomfortable.</p>
-
-
-                        <div class="kannyimgg">
-                            <img src="images/16.jpeg">
-                        </div>
-
-
-                        <div class="cta-box">
-                            <h3>Kenny Weiss: Truth & Healing Advocate</h3>
-                            <p>He specializes in helping people heal from their emotional hurts, co-dependence, and pain
-                                from the past so they can once again love themselves. </p>
-                            <div class="button-row">
-                                <a class="button" href="book-session.html">Let’s talk</a>
-                            </div>
-                            <div class="step"><small>All queries are replied within
-                                    <u>24hrs</u>.</small></div>
-                        </div>
-
-                    </div>
-
-                    <div class="right" data-aos="zoom-in-left">
-                        <div class="step-line"></div>
-  
-                    <div class="step">
-                            <div class="step-number">1</div>
-                            <div class="step-content">
-                                <h4>Truly Heard — Without Judgment</h4>
-                                <p>This isn’t a surface-level chat. It’s a safe space where your feelings, pain, and
-                                    questions are met with understanding — not shame or dismissal.</p>
-                            </div>
-                        </div>
-
-                        <div class="step">
-                            <div class="step-number">2</div>
-                            <div class="step-content">
-                                <h4>Clarity on What’s Really Going On</h4>
-                                <p>Most people don't realize what's beneath their sadness, fatigue, or numbness. Kenny
-                                    helps you identify the real root — not just treat the symptoms.</p>
-                            </div>
-                        </div>
-
-                        <div class="step">
-                            <div class="step-number">3</div>
-                            <div class="step-content">
-                                <h4>Personalized Path Forward</h4>
-                                <p>No cookie-cutter advice here. Based on your unique situation, Kenny outlines clear
-                                    next steps so you know exactly what healing can look like — for you.</p>
-                            </div>
-                        </div>
-
-
-                        <div class="step">
-                            <div class="step-number">4</div>
-                            <div class="step-content">
-                                <h4>Leave With Hope (Maybe for the First Time in a While)</h4>
-                                <p>Even a single conversation can help you feel lighter, more seen, and less alone — and
-                                    that spark can change everything.</p>
-                            </div>
-                        </div> 
-
-
-
-                    </div>
-                </div>
-            </div>
-        </section> -->
-
+       
 
         <app-exercises-workbook/>
         <section class="self-development" style="background-image: url(./images/8.jpeg);">
             <div class="container">
-                <div class="self-development-content" data-aos="fade-up" data-aos-duration="1500">
+                <div class="self-development-content" data-aos="fade-up" data-aos-duration="100">
                     <h3>Feeling Lost, Alone and Struggling Inside — But Still Not Sure If You Deserve Help?</h3>
                     <p>Start With a Free Resource That Speaks to What You’re Really Feeling</p>
 
-                    <a class="button whitebt" href="courses.html">Explore Our Free Resources</a>
+                    <a class="button whitebt"  routerLink="/courses" >Explore Our Free Resources</a>
 
                 </div>
             </div>
@@ -538,7 +461,7 @@
 
         <section class="blog-section">
             <div class="container">
-                <div class="flex-row" data-aos="fade-up" data-aos-duration="1500">
+                <div class="flex-row" data-aos="fade-up" data-aos-duration="100">
                     <h5 class="tag-line">Our Blog</h5>
                     <h3>Latest from the Blog</h3>
                     <p class="subtitle">I write about self development
@@ -559,7 +482,7 @@
                             <h3>We provide you Motivational coaching</h3>
                             <p>Novia's spaciously two bedroom apartments are perfect for families and even business
                                 partners. Look out into the Manhattan skyline from the open fully equipped kitchen.</p>
-                            <a class="post-link" href="blog.html">View more <i
+                            <a class="post-link" routerLink="/blog">View more <i
                                     class="fa-solid fa-arrow-up-right-from-square"></i></a>
                         </div>
                     </div>
@@ -576,7 +499,7 @@
                             <h3>We provide you Motivational coaching</h3>
                             <p>Novia's spaciously two bedroom apartments are perfect for families and even business
                                 partners. Look out into the Manhattan skyline from the open fully equipped kitchen.</p>
-                            <a class="post-link" href="blog.html">View more <i
+                            <a class="post-link" routerLink="/blog">View more <i
                                     class="fa-solid fa-arrow-up-right-from-square"></i></a>
                         </div>
                     </div>
@@ -593,7 +516,7 @@
                             <h3>We provide you Motivational coaching</h3>
                             <p>Novia's spaciously two bedroom apartments are perfect for families and even business
                                 partners. Look out into the Manhattan skyline from the open fully equipped kitchen.</p>
-                            <a class="post-link" href="blog.html">View more <i
+                            <a class="post-link" routerLink="/blog">View more <i
                                     class="fa-solid fa-arrow-up-right-from-square"></i></a>
                         </div>
                     </div>
@@ -610,14 +533,14 @@
                             <h3>We provide you Motivational coaching</h3>
                             <p>Novia's spaciously two bedroom apartments are perfect for families and even business
                                 partners. Look out into the Manhattan skyline from the open fully equipped kitchen.</p>
-                            <a class="post-link" href="blog.html">View more <i
+                            <a class="post-link" routerLink="/blog">View more <i
                                     class="fa-solid fa-arrow-up-right-from-square"></i></a>
                         </div>
                     </div>
                 </div>
             </div>
         </section>
-        <section class="podcast-section" data-aos="fade-up" data-aos-duration="1500">
+        <section class="podcast-section" data-aos="fade-up" data-aos-duration="100">
             <div class="left-bg"></div>
             <div class="right-bg"></div>
 
@@ -707,7 +630,7 @@
 
                     <!-- Right Side Content -->
                     <div class="right-content homesder aos-init aos-animate" data-aos="fade-up"
-                        data-aos-duration="1500">
+                        data-aos-duration="100">
                         <h5 class="tag-line">Our Books</h5>
                         <h3>Your Journey to Being Yourself & Success Books</h3>
                         <p class="description">
