--- a/src/app/layout/resources/resources.component.html
+++ b/src/app/layout/resources/resources.component.html
@@ -38,8 +38,8 @@
                             these new skills and tools.</p>
 
                         <div class="button-row">
-                            <a class=" button" href="courses-details.html">Begin Here</a>
-                            <a class="button" href="courses-details.html">Start Your Journey</a>
+                            <a class=" button" routerLink="/courses-details">Begin Here</a>
+                            <a class="button" routerLink="/courses-details">Start Your Journey</a>
                         </div>
 
                     </div>
@@ -48,7 +48,7 @@
         </section>
 
 
-        <section class="podcast-section aos-init aos-animate" data-aos="fade-up" data-aos-duration="1500">
+        <section class="podcast-section aos-init aos-animate" data-aos="fade-up" data-aos-duration="100">
             <div class="left-bg"></div>
             <div class="right-bg"></div>
 
@@ -120,7 +120,7 @@
                         </div>
                     </div>
 
-                    <div class="right-content aos-init aos-animate" data-aos="fade-up" data-aos-duration="1500">
+                    <div class="right-content aos-init aos-animate" data-aos="fade-up" data-aos-duration="100">
                         <h5 class="tag-line">WHO WE ARE</h5>
                         <h3>Recommended Reading</h3>
                         <p class="bold">to accompany you on your journey</p>
@@ -138,7 +138,7 @@
                         </p>
 
 
-                        <a href="books.html" class="button">Reading Resources</a>
+                        <a routerLink="/books" class="button">Reading Resources</a>
                     </div>
                 </div>
 
@@ -151,7 +151,7 @@
             <div class="container">
                 <div class="free-download-row">
 
-                    <div class="card-columns" data-aos="fade-up" data-aos-duration="1500">
+                    <div class="card-columns" data-aos="fade-up" data-aos-duration="100">
 
 
                         <div class="formleffieldds">
@@ -185,7 +185,7 @@
                         </div>
                     </div>
 
-                    <div class="card-columns" data-aos="fade-up" data-aos-duration="1500"> 
+                    <div class="card-columns" data-aos="fade-up" data-aos-duration="100"> 
 
                         <div class="freeform-img">
                             <img src="images/Resource-Page-Heal-1.jpeg">
@@ -217,7 +217,7 @@
                         </div>
                     </div>
 
-                    <div class="card-columns" data-aos="fade-up" data-aos-duration="1500"> 
+                    <div class="card-columns" data-aos="fade-up" data-aos-duration="100"> 
 
                         <div class="formleffieldds">
                             <div class="allminsders">
@@ -251,7 +251,7 @@
                         </div>
                     </div>
 
-                    <div class="card-columns" data-aos="fade-up" data-aos-duration="1500"> 
+                    <div class="card-columns" data-aos="fade-up" data-aos-duration="100"> 
                         <div class="freeform-img">
                             <img src="images/Free-Resources-2.jpeg">
                         </div>
@@ -285,7 +285,7 @@
 
                     </div>
 
-                    <div class="card-columns" data-aos="fade-up" data-aos-duration="1500">
+                    <div class="card-columns" data-aos="fade-up" data-aos-duration="100">
 
                         <div class="formleffieldds">
                             <div class="allminsders">
@@ -319,7 +319,7 @@
                         </div>
                     </div>
 
-                    <div class="card-columns" data-aos="fade-up" data-aos-duration="1500">
+                    <div class="card-columns" data-aos="fade-up" data-aos-duration="100">
                         <div class="freeform-img">
                             <img src="images/Free-Resources-2-Feelingswhee1-1.jpeg">
                         </div>
