--- a/src/app/layout/courses/courses.component.html
+++ b/src/app/layout/courses/courses.component.html
@@ -1,14 +1,14 @@
  <main class="pt-1 pt-4">
 
         <section class="sourses-section">
-            <div class="course-heading" data-aos="fade-up" data-aos-duration="1500">
+            <div class="course-heading">
                 <h5 class="tag-line">Learn from me</h5>
                 <h3>Courses and Master Classes</h3>
             </div>
 
             <div class="container ">
 
-                <div class="flex-who-we-are mb-3" data-aos="fade-up" data-aos-duration="1500">
+                <div class="flex-who-we-are mb-3" >
                     <!-- Left Side Images -->
                     <div class="left-images">
                         <div class="main-img">
@@ -54,7 +54,7 @@
                     </div>
                 </div>
 
-                <div class="flex-who-we-are mb-3" data-aos="fade-up" data-aos-duration="1500">
+                <div class="flex-who-we-are mb-3" data-aos="fade-up" data-aos-duration="300">
                     <!-- Left Side Images -->
                     <div class=" left-images">
                         <div class="main-img">
@@ -102,7 +102,7 @@
                     </div>
                 </div>
 
-                <div class="flex-who-we-are mb-3" data-aos="fade-up" data-aos-duration="1500">
+                <div class="flex-who-we-are mb-3" data-aos="fade-up" data-aos-duration="400">
                     <!-- Left Side Images -->
                     <div class="left-images">
                         <div class="main-img">
@@ -148,7 +148,7 @@
 
 
 
-                <div class="flex-aboutarea" data-aos="fade-up" data-aos-duration="1500">
+                <div class="flex-aboutarea" data-aos="fade-up" data-aos-duration="500">
                     <div class="left-area">
                         <div class="thumbnail-wrapper3">
                             <div class="course-1">
